kubernetes/apps/longhorn-system/longhorn/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: longhorn-auth
  namespace: longhorn-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: longhorn-httproute
  extAuth:
    http:
      backendRef:
        name: authentik-server
        namespace: default
        port: 80
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - cookie
        - set-cookie
        - x-authentik-username
        - x-authentik-groups
        - x-authentik-email
        - x-authentik-name
        - x-authentik-uid
